[package]
name = "arroy-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

arroy = { version = "0.2.0", features = ["assert-reader-validity", "plot"] }
bytemuck = { version = "1.14.0", features = ["derive", "extern_crate_alloc"] }
byteorder = "1.5.0"
heed = { version = "0.20.0-alpha.9", default-features = false }
memmap2 = "0.9.0"
ordered-float = "4.1.1"
rand = { version = "0.8.5", features = ["alloc"] }
rayon = "1.8.0"
roaring = "0.10.2"
tempfile = "3.8.1"
thiserror = "1.0.50"
anyhow = "1.0.79"
env_logger = "0.10.2"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["v4"] }
pickledb = "0.5.1"
